--- a/csg2.bat.in
+++ b/csg2.bat.in
@@ -1,3 +1,20 @@
 @echo off
+REM
+REM    ChlorideSiteGenerator 2
+REM    Copyright (C) 2016 Sebastian "Chloride Cull" Johansson
+REM
+REM    This program is free software: you can redistribute it and/or modify
+REM    it under the terms of the GNU Affero General Public License as published by
+REM    the Free Software Foundation, either version 3 of the License, or
+REM    (at your option) any later version.
+REM
+REM    This program is distributed in the hope that it will be useful,
+REM    but WITHOUT ANY WARRANTY; without even the implied warranty of
+REM    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+REM    GNU Affero General Public License for more details.
+REM
+REM    You should have received a copy of the GNU Affero General Public License
+REM    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+REM
 set CSG2_THEMES=@POSTINSTALLPATH@/share/csg2/themes
 py @POSTINSTALLPATH@/lib/csg2/serve.py %*
