add systemd service, clean up configure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,21 @@
 cmake_minimum_required(VERSION 3.0)
 project(CSG2 NONE)
+option(ENABLE_SYSTEMD "Generate a systemd service" ON)
 
-set(REALPATH ${CMAKE_INSTALL_PREFIX})
+set(POSTINSTALLPATH ${CMAKE_INSTALL_PREFIX})
 
-install(FILES serve.py DESTINATION lib/csg2)
-install(DIRECTORY docs DESTINATION share/doc/csg2)
-install(DIRECTORY themes DESTINATION share/csg2)
+install(FILES serve.py DESTINATION usr/lib/csg2)
+install(DIRECTORY docs DESTINATION usr/share/doc/csg2)
+install(DIRECTORY themes DESTINATION usr/share/csg2)
 install(DIRECTORY site.example DESTINATION var/csg2)
-configure_file(GenerateWrapper.cmake.in GenerateWrapper.cmake @ONLY)
-install(SCRIPT ${CMAKE_BINARY_DIR}/GenerateWrapper.cmake)
 if(WIN32)
-	configure_file(csg2.bat.in csg2.bat.in COPYONLY)
-	install(PROGRAMS ${CMAKE_BINARY_DIR}/csg2.bat DESTINATION bin/)
+	configure_file(csg2.bat.in csg2.bat @ONLY)
+	install(PROGRAMS ${CMAKE_BINARY_DIR}/csg2.bat DESTINATION usr/bin)
 else()
-	configure_file(csg2.in csg2.in COPYONLY)
-	install(PROGRAMS ${CMAKE_BINARY_DIR}/csg2 DESTINATION bin/)
+	configure_file(csg2.in csg2 @ONLY)
+	install(PROGRAMS ${CMAKE_BINARY_DIR}/csg2 DESTINATION usr/bin)
+endif()
+if(ENABLE_SYSTEMD)
+	configure_file(csg2@.service.in csg2@.service @ONLY)
+	install(FILES ${CMAKE_BINARY_DIR}/csg2@.service DESTINATION etc/systemd/system)
 endif()
