--- a/csg2@.service.in
+++ b/csg2@.service.in
@@ -2,7 +2,7 @@
 Description=ChlorideSiteGenerator 2 - for site %i
 
 [Service]
-ExecStart=@POSTINSTALLPATH@/usr/bin/csg2 @POSTINSTALLPATH@/var/csg2/%I
+ExecStart=@POSTINSTALLPATH@/bin/csg2 /srv/csg2/%I
 
 [Install]
 WantedBy=multi-user.target
