disable debug and listen beyond localhost

--- a/csg2@.service.in
+++ b/csg2@.service.in
@@ -3,6 +3,7 @@ Description=ChlorideSiteGenerator 2 - for site %i
 
 [Service]
 ExecStart=@POSTINSTALLPATH@/bin/csg2 /srv/csg2/%I
+StandardOutput=journal
 
 [Install]
 WantedBy=multi-user.target
