--- a/csg2@.service.in
+++ b/csg2@.service.in
@@ -4,6 +4,7 @@ Description=ChlorideSiteGenerator 2 - for site %i
 [Service]
 ExecStart=@POSTINSTALLPATH@/bin/csg2 /srv/csg2/%I
 StandardOutput=journal
+StandardError=journal
 
 [Install]
 WantedBy=multi-user.target
