--- a/csg2.in
+++ b/csg2.in
@@ -17,4 +17,4 @@
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 export CSG2_THEMES="@POSTINSTALLPATH@/share/csg2/themes"
-python3 @POSTINSTALLPATH@/lib/csg2/serve.py $@
+python3 @POSTINSTALLPATH@/@LIBEXECPATH@/serve.py $@
