--- a/csg2.bat.in
+++ b/csg2.bat.in
@@ -17,4 +17,4 @@ REM    You should have received a copy of the GNU Affero General Public License
 REM    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 REM
 set CSG2_THEMES=@POSTINSTALLPATH@/share/csg2/themes
-py @POSTINSTALLPATH@/lib/csg2/serve.py %*
+py @POSTINSTALLPATH@/@LIBEXECPATH@/serve.py %*
