put nginx in front of sites to not pollute ports
the systemd service for csg2 depend on the csg2-nginx service, making it
pretty seamless for that

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ endif()
 install(FILES serve.py sandbox.py DESTINATION ${LIBEXECPATH})
 install(DIRECTORY docs DESTINATION share/doc/csg2)
 install(DIRECTORY themes DESTINATION share/csg2)
+install(FILES nginx.conf site-template.conf DESTINATION share/csg2)
 install(DIRECTORY site.example DESTINATION share/doc/csg2)
 if(WIN32)
 	configure_file(csg2.bat.in csg2.bat @ONLY)
@@ -23,5 +24,6 @@ else()
 endif()
 if(ENABLE_SYSTEMD)
 	configure_file(csg2@.service.in csg2@.service @ONLY)
-	install(FILES ${CMAKE_BINARY_DIR}/csg2@.service DESTINATION lib/systemd/system)
+    configure_file(csg2-nginx.service.in csg2-nginx.service @ONLY)
+	install(FILES ${CMAKE_BINARY_DIR}/csg2@.service ${CMAKE_BINARY_DIR}/csg2-nginx.service DESTINATION lib/systemd/system)
 endif()
