--- a/csg2.in
+++ b/csg2.in
@@ -17,4 +17,5 @@
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 export CSG2_THEMES="@POSTINSTALLPATH@/share/csg2/themes"
+export CSG2_SITECONF="@POSTINSTALLPATH@/share/csg2/site-template.conf"
 python3 @POSTINSTALLPATH@/@LIBEXECPATH@/serve.py $@
