--- a/csg2.bat.in
+++ b/csg2.bat.in
@@ -17,4 +17,5 @@ REM    You should have received a copy of the GNU Affero General Public License
 REM    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 REM
 set CSG2_THEMES=@POSTINSTALLPATH@/share/csg2/themes
-py @POSTINSTALLPATH@/@LIBEXECPATH@/serve.py %*
+set CSG2_SITECONF=@POSTINSTALLPATH@/share/csg2/site-template.conf
+py -3 @POSTINSTALLPATH@/@LIBEXECPATH@/serve.py %*
