replace tabs with spaces and yell at ubuntu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ option(NO_LIBEXEC "Place internal binaries in lib/csg2/ instead of libexec/" ON)
 
 set(POSTINSTALLPATH ${CMAKE_INSTALL_PREFIX})
 if(NO_LIBEXEC)
-	set(LIBEXECPATH "lib/csg2")
+    set(LIBEXECPATH "lib/csg2")
 else()
-	set(LIBEXECPATH "libexec/csg2")
+    set(LIBEXECPATH "libexec/csg2")
 endif()
 
 install(FILES serve.py sandbox.py DESTINATION ${LIBEXECPATH})
@@ -16,14 +16,16 @@ install(DIRECTORY themes DESTINATION share/csg2)
 install(FILES nginx.conf site-template.conf DESTINATION share/csg2)
 install(DIRECTORY site.example DESTINATION share/doc/csg2)
 if(WIN32)
-	configure_file(csg2.bat.in csg2.bat @ONLY)
-	install(PROGRAMS ${CMAKE_BINARY_DIR}/csg2.bat DESTINATION bin)
+    configure_file(csg2.bat.in csg2.bat @ONLY)
+    install(PROGRAMS ${CMAKE_BINARY_DIR}/csg2.bat DESTINATION bin)
 else()
-	configure_file(csg2.in csg2 @ONLY)
-	install(PROGRAMS ${CMAKE_BINARY_DIR}/csg2 DESTINATION bin)
+    configure_file(csg2.in csg2 @ONLY)
+    install(PROGRAMS ${CMAKE_BINARY_DIR}/csg2 DESTINATION bin)
 endif()
 if(ENABLE_SYSTEMD)
-	configure_file(csg2@.service.in csg2@.service @ONLY)
+    execute_process(COMMAND which nginx OUTPUT_VARIABLE NGINXBIN) # Thanks, Ubuntu, for putting nginx in /usr/sbin, because it's clearly the best option.
+    execute_process(COMMAND which kill OUTPUT_VARIABLE KILLBIN)   # Yet, you place kill in /bin.
+    configure_file(csg2@.service.in csg2@.service @ONLY)
     configure_file(csg2-nginx.service.in csg2-nginx.service @ONLY)
-	install(FILES ${CMAKE_BINARY_DIR}/csg2@.service ${CMAKE_BINARY_DIR}/csg2-nginx.service DESTINATION lib/systemd/system)
+    install(FILES ${CMAKE_BINARY_DIR}/csg2@.service ${CMAKE_BINARY_DIR}/csg2-nginx.service DESTINATION lib/systemd/system)
 endif()
