--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ endif()
 install(FILES serve.py sandbox.py DESTINATION ${LIBEXECPATH})
 install(DIRECTORY docs DESTINATION share/doc/csg2)
 install(DIRECTORY themes DESTINATION share/csg2)
-install(FILES nginx.conf site-template.conf DESTINATION share/csg2)
+configure_file(nginx.conf.in nginx.conf @ONLY)
+install(FILES ${CMAKE_BINARY_DIR}/nginx.conf site-template.conf DESTINATION share/csg2)
 install(DIRECTORY site.example DESTINATION share/doc/csg2)
 if(WIN32)
     configure_file(csg2.bat.in csg2.bat @ONLY)
