setup proper logging as well

--- a/csg2@.service.in
+++ b/csg2@.service.in
@@ -5,6 +5,7 @@ After=csg2-nginx.service
 
 [Service]
 User=nobody
+Group=nogroup
 ExecStart=@POSTINSTALLPATH@/bin/csg2 /srv/csg2/ %I
 StandardOutput=journal
 StandardError=journal
