--- a/csg2.py.in
+++ b/csg2.py.in
@@ -1,4 +1,4 @@
-#!/usr/bin/env python3
+#!/usr/bin/env python3 -u
 #
 #    ChlorideSiteGenerator 2
 #    Copyright (C) 2016 Sebastian "Chloride Cull" Johansson
