--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(POSTINSTALLPATH ${CMAKE_INSTALL_PREFIX})
 install(FILES serve.py sandbox.py configman.py DESTINATION share/csg2)
 install(DIRECTORY docs DESTINATION share/doc/csg2)
 install(DIRECTORY themes DESTINATION share/csg2)
+install(DIRECTORY default-files DESTINATION share/csg2)
 configure_file(nginx.conf.in nginx.conf @ONLY)
 install(FILES ${CMAKE_BINARY_DIR}/nginx.conf site-template.conf DESTINATION share/csg2)
 install(DIRECTORY site.example DESTINATION share/doc/csg2)
