--- a/nginx.conf.in
+++ b/nginx.conf.in
@@ -1,6 +1,6 @@
 worker_processes auto;
 pid /var/run/csg2_nginx.pid;
-user nobody nogroup;
+user @SERVUSERNAME@;
 
 events {
     worker_connections 768;
