Add default error pages

--- a/nginx.conf.in
+++ b/nginx.conf.in
@@ -24,14 +24,19 @@ http {
     error_log /var/log/csg2/nginx-error.log;
 
     gzip off;
-
+    
+    location @errpages {
+        root @POSTINSTALLPATH@/share/csg2/nginx-default;
+    }
+    
     include /tmp/*.csg2nginx;
     
     server {
         listen 8080 default_server;
 	    listen [::]:8080 default_server;
+        error_page 404 =400 @errpages/notavailable.html;
         location / {
-            root @POSTINSTALLPATH@/share/csg2/nginx-default;
+            return 404;
         }
     }
 }
