--- a/site-template.conf
+++ b/site-template.conf
@@ -2,6 +2,7 @@ server {
 	listen 8080;
 	listen [::]:8080;
 	server_name %%SERVERNAME%%;
+    error_page 504 @errpages/timeout.html;
 	location / {
 		proxy_pass http://unix:%%SOCKETPATH%%:;
 	}
