fix nginx config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ install(DIRECTORY themes DESTINATION share/csg2)
 install(DIRECTORY default-files DESTINATION share/csg2)
 install(DIRECTORY nginx-default DESTINATION share/csg2)
 configure_file(nginx.conf.in nginx.conf @ONLY)
-install(FILES ${CMAKE_BINARY_DIR}/nginx.conf site-template.conf DESTINATION share/csg2)
+configure_file(site-template.conf.in site-template.conf @ONLY)
+install(FILES ${CMAKE_BINARY_DIR}/nginx.conf ${CMAKE_BINARY_DIR}/site-template.conf DESTINATION share/csg2)
 install(DIRECTORY site.example DESTINATION share/doc/csg2)
 
 find_program(USERADDBIN useradd)
